--- a/css/style.css
+++ b/css/style.css
@@ -544,13 +544,15 @@ img {
   font-size: 24px;
   line-height: 30px;
   text-transform: uppercase;
+  margin-top: 0;
   margin-bottom: 57px;
 }
 .activities-wrapper {
   display: flex;
   justify-content: space-between;
 }
-.activities .card {
+
+.card {
   position: relative;
   width: 255px;
   height: 255px;
@@ -558,7 +560,7 @@ img {
   flex-direction: column;
   align-items: flex-start;
 }
-.activities .card::after {
+.card::after {
   content: "";
   position: absolute;
   top: 0;
@@ -567,18 +569,21 @@ img {
   bottom: 0;
   width: 100%;
   height: 100%;
+  border-radius: 6px;
   background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%);
   z-index: -1;
 }
-.activities .card__image {
+.card__image {
   position: absolute;
+  border-radius: 6px;
+  width: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
-  border-radius: 6px;
   overflow: hidden;
   z-index: -1;
 }
-.activities .card__title {
+.card__title {
   position: absolute;
   margin: 0;
   bottom: 72px;
@@ -590,7 +595,7 @@ img {
   line-height: 20px;
   width: 80%;
 }
-.activities .card__button {
+.card__button {
   position: absolute;
   bottom: 24px;
   left: 26px;
@@ -618,6 +623,10 @@ img {
     height: 450px;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+  .card {
+    width: 230px;
+    height: 230px;
   }
 }
 @media (max-width: 992px) {
@@ -674,6 +683,16 @@ img {
   }
   .reviews-slider__item {
     max-width: 580px;
+  }
+  .activities-wrapper {
+    flex-wrap: wrap;
+  }
+  .card {
+    width: 340px;
+    height: 255px;
+  }
+  .card__item {
+    margin-bottom: 20px;
   }
 }
 @media (max-width: 768px) {
@@ -767,6 +786,10 @@ img {
   .reviews-slider__item:after, .reviews-slider__item::before {
     display: none;
   }
+  .card {
+    width: 49%;
+    height: 255px;
+  }
 }
 @media (max-width: 576px) {
   .logo {
@@ -812,5 +835,17 @@ img {
   }
   .reviews-slider__item {
     padding: 0;
+  }
+  .activities {
+    padding: 40px 0 60px 0;
+  }
+  .activities__title {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 23px;
+    margin-bottom: 36px;
+  }
+  .card {
+    width: 100%;
   }
 }/*# sourceMappingURL=style.css.map */
