--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -9,6 +9,9 @@
       &__img
         height: 450px
         object-fit: cover
+  .card
+    width: 230px
+    height: 230px
 @media (max-width: 992px)
   .container, 
   .newsletter-wrapper
@@ -52,11 +55,19 @@
       margin-bottom: 50px
     &-slider           
       &__item  
-        max-width: 580px  
+        max-width: 580px 
+  .activities
+    &-wrapper
+      flex-wrap: wrap
+  .card
+    width: 340px
+    height: 255px
+    &__item
+      margin-bottom: 20px
 
 @media (max-width: 768px)
   .container
-    max-width: 576px
+    max-width: 576px // 700px
     width: 92%      
   .navbar
     &__search, &__user, &-menu
@@ -131,6 +142,10 @@
         padding: 0 30px 30px
         &:after, &::before
           display: none
+  .card
+    width: 49%
+    height: 255px
+      
 @media ( max-width: 576px )
   .logo
     width: 99px 
@@ -169,4 +184,13 @@
         top: 45px
       &__item
         padding: 0
+  .activities
+    padding: 40px 0 60px 0
+    &__title
+      font-weight: 700
+      font-size: 18px
+      line-height: 23px
+      margin-bottom: 36px
+  .card
+    width: 100%
   
