--- a/sass/blocks/_activities.sass
+++ b/sass/blocks/_activities.sass
@@ -6,60 +6,64 @@
     font-size: 24px
     line-height: 30px
     text-transform: uppercase
+    margin-top: 0
     margin-bottom: 57px
   &-wrapper
     display: flex
     justify-content: space-between
-  .card
-    position: relative        
-    width: 255px
-    height: 255px
-    display: flex
-    flex-direction: column
-    align-items: flex-start   
-    &::after      
-        content: ''
-        position: absolute
-        top: 0
-        left: 0
-        right: 0
-        bottom: 0
-        width: 100%
-        height: 100%
-        background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%)
-        z-index: -1   
-    &__image
-      position: absolute      
-      object-fit: cover
-      border-radius: 6px  
-      overflow: hidden  
-      z-index: -1                
-    &__title
-      position: absolute
-      margin: 0
-      bottom: 72px
-      left: 26px  
-      z-index: 1    
-      color: $white-color
-      font-weight: 700
-      font-size: 16px
-      line-height: 20px
-      width: 80%
-    &__button
-      position: absolute
-      bottom: 24px
-      left: 26px
-      min-width: 100px
-      height: 30px
-      cursor: pointer
-      z-index: 1
-      border: none
-      border-radius: 4px
-      background-color: $accent
-      color: $white-color
-      font-weight: 600
-      font-size: 12px
-      line-height: 16px
+.card
+  position: relative        
+  width: 255px
+  height: 255px
+  display: flex
+  flex-direction: column
+  align-items: flex-start   
+  &::after      
+    content: ''
+    position: absolute
+    top: 0
+    left: 0
+    right: 0
+    bottom: 0
+    width: 100%
+    height: 100%
+    border-radius: 6px
+    background: linear-gradient(179.83deg, rgba(196, 196, 196, 0) 35.34%, #0A223D 99.85%)
+    z-index: -1   
+  &__image
+    position: absolute 
+    border-radius: 6px 
+    width: 100%
+    height: 100%    
+    object-fit: cover      
+    overflow: hidden  
+    z-index: -1                
+  &__title
+    position: absolute
+    margin: 0
+    bottom: 72px
+    left: 26px  
+    z-index: 1    
+    color: $white-color
+    font-weight: 700
+    font-size: 16px
+    line-height: 20px
+    width: 80%
+  &__button
+    position: absolute
+    bottom: 24px
+    left: 26px
+    min-width: 100px
+    height: 30px
+    cursor: pointer
+    z-index: 1
+    border: none
+    border-radius: 4px
+    background-color: $accent
+    color: $white-color
+    font-weight: 600
+    font-size: 12px
+    line-height: 16px
       
       
       
