--- a/css/style.css
+++ b/css/style.css
@@ -683,11 +683,30 @@ img {
   grid-column-start: 1;
   grid-column-end: 3;
   display: flex;
+  position: relative;
+}
+.packages-double:before {
+  content: "Flash Offer";
+  position: absolute;
+  left: 0;
+  top: 26px;
+  width: 95px;
+  height: 30px;
+  border-radius: 0px 4px 4px 0px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 12px;
+  line-height: 30px;
+  background-color: #EC1F46;
+  text-align: center;
+  vertical-align: center;
+  z-index: 1;
 }
 .packages-double__big-image {
   width: 366px;
   height: 500px;
   border-radius: 8px 0px 0px 8px;
+  z-index: 0;
 }
 .packages-double__information {
   padding: 46px 21px 30px 44px;
@@ -713,11 +732,30 @@ img {
 .packages-brief {
   display: flex;
   flex-direction: column;
+  position: relative;
+}
+.packages-brief:before {
+  content: "Flash Offer";
+  position: absolute;
+  left: 0;
+  top: 26px;
+  width: 60px;
+  height: 18px;
+  border-radius: 0px 4px 4px 0px;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 8px;
+  line-height: 18px;
+  background-color: #EC1F46;
+  text-align: center;
+  vertical-align: center;
+  z-index: 1;
 }
 .packages-brief__image {
   width: 100%;
   height: 50%;
   border-radius: 8px 8px 0px 0px;
+  overflow: cover;
 }
 .packages-brief__information {
   padding: 0px 21px 25px 32px;
