--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -55,11 +55,29 @@
   &-double
     grid-column-start: 1
     grid-column-end: 3  
-    display: flex  
+    display: flex
+    position: relative  
+    &:before        
+        content: 'Flash Offer'
+        position: absolute
+        left: 0
+        top: 26px
+        width: 95px
+        height: 30px      
+        border-radius: 0px 4px 4px 0px
+        font-style: normal
+        font-weight: 600
+        font-size: 12px
+        line-height: 30px
+        background-color: $accent
+        text-align: center
+        vertical-align: center
+        z-index: 1
     &__big-image
       width: 366px
       height: 500px
       border-radius: 8px 0px 0px 8px      
+      z-index: 0 
     &__information
       padding: 46px 21px 30px 44px
       width: 50%
@@ -79,11 +97,29 @@
       margin-bottom: 37px
   &-brief
     display: flex
-    flex-direction: column    
+    flex-direction: column 
+    position: relative
+    &:before        
+        content: 'Flash Offer'
+        position: absolute
+        left: 0
+        top: 26px
+        width: 60px
+        height: 18px      
+        border-radius: 0px 4px 4px 0px
+        font-style: normal
+        font-weight: 600
+        font-size: 8px
+        line-height: 18px
+        background-color: $accent
+        text-align: center
+        vertical-align: center
+        z-index: 1      
     &__image
       width: 100%
       height: 50%
       border-radius: 8px 8px 0px 0px
+      overflow: cover 
     &__information
       padding: 0px 21px 25px 32px
     &__stars
