--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@ img {
   text-decoration: none;
   color: inherit;
 }
+.navbar-menu__item--mobile_visible {
+  display: none;
+}
 
 .logo {
   width: 177px;
@@ -1145,12 +1148,56 @@ img {
   }
 }
 @media (max-width: 768px) {
+  body {
+    padding-top: 78px;
+  }
   .container {
     max-width: 576px;
     width: 92%;
   }
-  .navbar__search, .navbar__user, .navbar-menu {
+  .navbar__search--mobile_hidden, .navbar__user--mobile_hidden {
     display: none;
+  }
+  .navbar__search--mobile {
+    margin-bottom: 39px;
+  }
+  .navbar-bottom {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 78px;
+    right: 0;
+    bottom: 0;
+    padding-top: 30px;
+  }
+  .navbar-bottom--visible {
+    display: block;
+  }
+  .navbar-menu {
+    flex-direction: column;
+  }
+  .navbar-menu__item {
+    margin-bottom: 20px;
+  }
+  .navbar-menu__item--mobile_visible {
+    display: flex;
+    flex-direction: column;
+  }
+  .navbar__mobile_fixed {
+    position: fixed;
+    left: 0;
+    top: 0;
+    right: 0;
+    z-index: 10;
+  }
+  .user {
+    flex-direction: column;
+    justify-content: center;
+    margin-bottom: 27px;
+  }
+  .user__Name--mobile-menu {
+    color: #FFFFFF;
+    margin: 10px 0 0;
   }
   .menu-button {
     display: flex;
