--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -143,12 +143,53 @@
     margin-top: 56px
 
 @media (max-width: 768px)
+  body
+    padding-top: 78px
   .container
     max-width: 576px // 700px
     width: 92%      
-  .navbar
-    &__search, &__user, &-menu
+  .navbar            
+    &__search, &__user
+      &--mobile
+        &_hidden
+          display: none 
+    &__search
+      &--mobile
+        margin-bottom: 39px   
+    &-bottom
       display: none
+      position: fixed
+      left: 0
+      top: 78px
+      right: 0
+      bottom: 0
+      padding-top: 30px
+      &--visible
+        display: block           
+    &-menu
+      flex-direction: column  
+      &__item
+        margin-bottom: 20px    
+        &--mobile
+          &_visible
+            display: flex
+            flex-direction: column
+    &__mobile
+      &_fixed
+        position: fixed
+        left: 0
+        top: 0
+        right: 0
+        z-index: 10
+  .user
+    flex-direction: column
+    justify-content: center    
+    margin-bottom: 27px 
+    &__Name
+      &--mobile
+        &-menu
+          color: $white-color
+          margin: 10px 0 0                  
   .menu
     &-button
       display: flex
