--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -28,6 +28,10 @@
     &__link
       text-decoration: none
       color: inherit  
+    &__item
+      &--mobile
+        &_visible
+          display: none
 .logo
   width: 177px
 .search
