--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,37 @@ img {
   font-style: normal;
 }
 
+.input {
+  background-color: #fff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+}
+
+.message {
+  background-color: #FFFFFF;
+  border-radius: 4px;
+  padding: 18px 23px;
+  border: none;
+  resize: none;
+}
+
+.button {
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 15px;
+  color: #FFFFFF;
+  background-color: #EC1F46;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
 .navbar {
   background-color: #fff;
 }
@@ -889,18 +920,14 @@ img {
   justify-content: space-between;
 }
 .footer .input {
-  background-color: #fff;
-  flex-basis: 47%;
-  /* width: 255px */
+  margin-bottom: 15px;
   height: 50px;
-  border-radius: 4px;
+  flex-basis: 48%;
+  /* width: 255px */
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
-  border: none;
-  padding: 0 23px;
-  margin-bottom: 15px;
 }
 .footer__message {
   width: 540px;
@@ -910,26 +937,11 @@ img {
   font-size: 12px;
   line-height: 15px;
   margin-bottom: 22px;
-  padding: 18px 23px;
-  border-radius: 4px;
-  resize: none;
 }
 .footer__send {
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-.footer__button {
-  width: 160px;
-  height: 50px;
-  border: none;
-  background-color: #EC1F46;
-  color: #FFFFFF;
-  font-weight: 700;
-  font-size: 12px;
-  line-height: 15px;
-  border-radius: 4px;
-  cursor: pointer;
 }
 .footer__info {
   color: #E0E0E0;
@@ -967,6 +979,54 @@ img {
 }
 .cards__block {
   margin-top: 95px;
+}
+
+.modal__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 20;
+}
+.modal__dialog {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 478px;
+  background-color: #0A223D;
+  color: #FFFFFF;
+  border-radius: 8px;
+  padding: 33px 88px;
+  z-index: 21;
+}
+.modal__close {
+  position: absolute;
+  top: 17px;
+  right: 18px;
+  cursor: pointer;
+  text-decoration: none;
+}
+.modal__title {
+  font-family: "Mulish";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  text-align: center;
+  margin: 0 0 15px;
+}
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+}
+.modal__message {
+  width: 100%;
+  min-height: 123px;
+  margin-bottom: 15px;
 }
 
 @media (max-width: 1200px) {
