--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -15,5 +15,31 @@ img
   font-family: 'Nunito'
   font-style: normal
 
+.input
+  background-color: #fff
+  border-radius: 4px
+  border: none
+  padding: 0 23px
+  height: 50px
+.message
+  background-color: $white-color
+  border-radius: 4px
+  padding: 18px 23px
+  border: none
+  resize: none 
+.button
+  min-width: 160px
+  min-height: 50px
+  padding: 18px
+  font-style: normal
+  font-weight: 700
+  font-size: 12px
+  line-height: 15px
+  color: $white-color
+  background-color: $accent
+  border: none
+  border-radius: 4px
+  cursor: pointer
+
 
 
