--- a/sass/style.sass
+++ b/sass/style.sass
@@ -18,5 +18,7 @@
 @import 'blocks/packages'
 //Подключение стилей для Footer
 @import 'blocks/footer'
+//Подключение стилей для Modal form
+@import 'blocks/modal'
 //Подключение стилей для адаптива
 @import 'media'
